<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_monthly_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tiinnamune.timesup.MainActivity"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_description"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/monthly_description" />

    <Space
        android:id="@+id/initial_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_button_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/enterDate_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/initial_space"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_centerHorizontal="true"
        >

        <EditText
            android:text="@string/day_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/day_label"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/year_value"
            android:text="@string/year_label"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <EditText
        android:id="@+id/month_value"
        android:text="@string/month_label"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

        <Button
            android:text="@string/view_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </LinearLayout>

    <Space
        android:id="@+id/secondInitial_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterDate_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/date_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/secondInitial_space"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:text="@string/date_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_label"
            android:layout_weight="0.1"/>
        <TextView
            android:id="@+id/date_value"
            android:text="@string/date_value"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/in_time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/date_linearLayout"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <TextView
            android:text="@string/in_time_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_time_label"
            android:layout_weight="0.1"/>
        <TextView
            android:text="@string/in_time_value"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_time_value"
            android:layout_weight="0.5"
            android:backgroundTint="#ff000000"
            android:textCursorDrawable="@null"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desired_out_time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/in_time_linearLayout"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <TextView
            android:text="@string/desired_out_time_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desired_out_time_label"
            android:layout_weight="0.1"/>
        <TextView
            android:text="@string/desired_out_time_value"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desired_out_time_value"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actual_out_time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/desired_out_time_linearLayout"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <TextView
            android:text="@string/actual_out_time_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actual_out_time_label"
            android:layout_weight="0.1"/>
        <TextView
            android:text="@string/actual_out_time_value"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actual_out_time_value"
            android:layout_weight="0.5"/>
    </LinearLayout>


    <Space
        android:id="@+id/third_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_time_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        />



    <LinearLayout
        android:id="@+id/total_time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/desired_out_time_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp">
        <TextView
            android:text="@string/total_time_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_out_time_label"
            android:layout_weight="0.1"/>
        <TextView
            android:text="@string/total_time_value"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_out_time_value"
            android:layout_weight="0.5"/>
    </LinearLayout>

</RelativeLayout>